// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> C O M P O N E N T --- WaypointsList +++ should equal snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-0"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-1"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div>
      <div>
        <ul
          class="waypointList"
          data-rbd-droppable-context-id="2"
          data-rbd-droppable-id="waypoint-list"
          id="waypoint-list"
        />
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-2"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      id="rbd-hidden-text-2-hidden-text-8"
      style="display: none;"
    >
      
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

    </div>
  </body>,
  "container": <div>
    <div>
      <ul
        class="waypointList"
        data-rbd-droppable-context-id="2"
        data-rbd-droppable-id="waypoint-list"
        id="waypoint-list"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`>>> C O M P O N E N T --- WaypointsList +++ should equal snapshot add many items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-0"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-1"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-2"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div>
      <div>
        <ul
          class="waypointList"
          data-rbd-droppable-context-id="3"
          data-rbd-droppable-id="waypoint-list"
          id="waypoint-list"
        >
          <li
            aria-describedby="rbd-hidden-text-3-hidden-text-10"
            class="dragWrapper"
            data-rbd-drag-handle-context-id="3"
            data-rbd-drag-handle-draggable-id="1"
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="1"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="waypoint"
            >
              <p>
                lorem
              </p>
              <button
                class="removeButton"
              >
                -
              </button>
            </div>
          </li>
          <li
            aria-describedby="rbd-hidden-text-3-hidden-text-10"
            class="dragWrapper"
            data-rbd-drag-handle-context-id="3"
            data-rbd-drag-handle-draggable-id="2"
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="2"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="waypoint"
            >
              <p>
                lorem1
              </p>
              <button
                class="removeButton"
              >
                -
              </button>
            </div>
          </li>
          <li
            aria-describedby="rbd-hidden-text-3-hidden-text-10"
            class="dragWrapper"
            data-rbd-drag-handle-context-id="3"
            data-rbd-drag-handle-draggable-id="3"
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="3"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="waypoint"
            >
              <p>
                lorem2
              </p>
              <button
                class="removeButton"
              >
                -
              </button>
            </div>
          </li>
          <li
            aria-describedby="rbd-hidden-text-3-hidden-text-10"
            class="dragWrapper"
            data-rbd-drag-handle-context-id="3"
            data-rbd-drag-handle-draggable-id="4"
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="4"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="waypoint"
            >
              <p>
                lorem3
              </p>
              <button
                class="removeButton"
              >
                -
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-3"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      id="rbd-hidden-text-3-hidden-text-10"
      style="display: none;"
    >
      
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

    </div>
  </body>,
  "container": <div>
    <div>
      <ul
        class="waypointList"
        data-rbd-droppable-context-id="3"
        data-rbd-droppable-id="waypoint-list"
        id="waypoint-list"
      >
        <li
          aria-describedby="rbd-hidden-text-3-hidden-text-10"
          class="dragWrapper"
          data-rbd-drag-handle-context-id="3"
          data-rbd-drag-handle-draggable-id="1"
          data-rbd-draggable-context-id="3"
          data-rbd-draggable-id="1"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="waypoint"
          >
            <p>
              lorem
            </p>
            <button
              class="removeButton"
            >
              -
            </button>
          </div>
        </li>
        <li
          aria-describedby="rbd-hidden-text-3-hidden-text-10"
          class="dragWrapper"
          data-rbd-drag-handle-context-id="3"
          data-rbd-drag-handle-draggable-id="2"
          data-rbd-draggable-context-id="3"
          data-rbd-draggable-id="2"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="waypoint"
          >
            <p>
              lorem1
            </p>
            <button
              class="removeButton"
            >
              -
            </button>
          </div>
        </li>
        <li
          aria-describedby="rbd-hidden-text-3-hidden-text-10"
          class="dragWrapper"
          data-rbd-drag-handle-context-id="3"
          data-rbd-drag-handle-draggable-id="3"
          data-rbd-draggable-context-id="3"
          data-rbd-draggable-id="3"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="waypoint"
          >
            <p>
              lorem2
            </p>
            <button
              class="removeButton"
            >
              -
            </button>
          </div>
        </li>
        <li
          aria-describedby="rbd-hidden-text-3-hidden-text-10"
          class="dragWrapper"
          data-rbd-drag-handle-context-id="3"
          data-rbd-drag-handle-draggable-id="4"
          data-rbd-draggable-context-id="3"
          data-rbd-draggable-id="4"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="waypoint"
          >
            <p>
              lorem3
            </p>
            <button
              class="removeButton"
            >
              -
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`>>> C O M P O N E N T --- WaypointsList +++ should equal snapshot after adding many items 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-0"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-1"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-2"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div>
      <div>
        <ul
          class="waypointList"
          data-rbd-droppable-context-id="3"
          data-rbd-droppable-id="waypoint-list"
          id="waypoint-list"
        >
          <li
            aria-describedby="rbd-hidden-text-3-hidden-text-10"
            class="dragWrapper"
            data-rbd-drag-handle-context-id="3"
            data-rbd-drag-handle-draggable-id="1"
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="1"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="waypoint"
            >
              <p>
                lorem
              </p>
              <button
                class="removeButton"
              >
                -
              </button>
            </div>
          </li>
          <li
            aria-describedby="rbd-hidden-text-3-hidden-text-10"
            class="dragWrapper"
            data-rbd-drag-handle-context-id="3"
            data-rbd-drag-handle-draggable-id="2"
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="2"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="waypoint"
            >
              <p>
                lorem1
              </p>
              <button
                class="removeButton"
              >
                -
              </button>
            </div>
          </li>
          <li
            aria-describedby="rbd-hidden-text-3-hidden-text-10"
            class="dragWrapper"
            data-rbd-drag-handle-context-id="3"
            data-rbd-drag-handle-draggable-id="3"
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="3"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="waypoint"
            >
              <p>
                lorem2
              </p>
              <button
                class="removeButton"
              >
                -
              </button>
            </div>
          </li>
          <li
            aria-describedby="rbd-hidden-text-3-hidden-text-10"
            class="dragWrapper"
            data-rbd-drag-handle-context-id="3"
            data-rbd-drag-handle-draggable-id="4"
            data-rbd-draggable-context-id="3"
            data-rbd-draggable-id="4"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="waypoint"
            >
              <p>
                lorem3
              </p>
              <button
                class="removeButton"
              >
                -
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="rbd-announcement-3"
      style="position: absolute; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%);"
    />
    <div
      id="rbd-hidden-text-3-hidden-text-10"
      style="display: none;"
    >
      
  Press space bar to start a drag.
  When dragging you can use the arrow keys to move the item around and escape to cancel.
  Some screen readers may require you to be in focus mode or to use your pass through key

    </div>
  </body>,
  "container": <div>
    <div>
      <ul
        class="waypointList"
        data-rbd-droppable-context-id="3"
        data-rbd-droppable-id="waypoint-list"
        id="waypoint-list"
      >
        <li
          aria-describedby="rbd-hidden-text-3-hidden-text-10"
          class="dragWrapper"
          data-rbd-drag-handle-context-id="3"
          data-rbd-drag-handle-draggable-id="1"
          data-rbd-draggable-context-id="3"
          data-rbd-draggable-id="1"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="waypoint"
          >
            <p>
              lorem
            </p>
            <button
              class="removeButton"
            >
              -
            </button>
          </div>
        </li>
        <li
          aria-describedby="rbd-hidden-text-3-hidden-text-10"
          class="dragWrapper"
          data-rbd-drag-handle-context-id="3"
          data-rbd-drag-handle-draggable-id="2"
          data-rbd-draggable-context-id="3"
          data-rbd-draggable-id="2"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="waypoint"
          >
            <p>
              lorem1
            </p>
            <button
              class="removeButton"
            >
              -
            </button>
          </div>
        </li>
        <li
          aria-describedby="rbd-hidden-text-3-hidden-text-10"
          class="dragWrapper"
          data-rbd-drag-handle-context-id="3"
          data-rbd-drag-handle-draggable-id="3"
          data-rbd-draggable-context-id="3"
          data-rbd-draggable-id="3"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="waypoint"
          >
            <p>
              lorem2
            </p>
            <button
              class="removeButton"
            >
              -
            </button>
          </div>
        </li>
        <li
          aria-describedby="rbd-hidden-text-3-hidden-text-10"
          class="dragWrapper"
          data-rbd-drag-handle-context-id="3"
          data-rbd-drag-handle-draggable-id="4"
          data-rbd-draggable-context-id="3"
          data-rbd-draggable-id="4"
          draggable="false"
          role="button"
          tabindex="0"
        >
          <div
            class="waypoint"
          >
            <p>
              lorem3
            </p>
            <button
              class="removeButton"
            >
              -
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
